--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -1,8 +1,9 @@
 :root {
-  --bg-color: #160c21;
-  --primary-color: #64ffda;
-  --secondary-color-1: #53df83;
-  --secondary-color-2: #00d5f7;
+  --bg-color: #f2f2f2;
+  --primary-color: #f7590f;
+  --secondary-color-1: #f98135;
+  --secondary-color-2: #f19853;
+
   --green-light: #95d5b2;
   --black: #000;
   --white: #fff;
@@ -23,5 +24,3 @@
   --sm-font-size: 1.4rem;
   --xs-font-size: 1.2rem;
 }
-// radial-gradient(farthest-side at 60% 80%, #733236, transparent)
-// #160C21
