--- a/src/Components/Contact/Contact.module.scss
+++ b/src/Components/Contact/Contact.module.scss
@@ -19,17 +19,20 @@
   }
   .what-is-next {
     color: var(--primary-color);
+    text-shadow: 0px 0px 1px var(--primary-color);
     font-size: var(--sm-font-size);
+    font-weight: 500;
     letter-spacing: 1px;
   }
   .contact-txt {
     font-size: var(--lg-font-size);
-    color: var(--grey-light);
+    color: var(--primary-color);
+    text-shadow: 1px 1px 3px var(--secondary-color-1);
     font-weight: 700;
   }
   .why-contact {
     font-size: var(--default-font-size);
-    color: var(--grey-light);
+    color: var(--black);
     width: 75%;
     letter-spacing: 1px;
     text-align: center;
@@ -39,6 +42,8 @@
     }
   }
   .contact-me {
-    @include btn(var(--primary-color), var(--bg-color));
+    width: 20rem;
+    padding: 1rem;
+    @include button-style;
   }
 }
