--- a/src/Layouts/Footer/Footer.module.scss
+++ b/src/Layouts/Footer/Footer.module.scss
@@ -1,7 +1,17 @@
 .footer {
-  padding: 6rem;
+  padding: 5rem 0;
   background-color: var(--bg-color);
   display: flex;
+  flex-direction: column;
+  position: relative;
+  .line {
+    width: 100%;
+    height: 1px;
+    background-color: rgba($color: #777, $alpha: 0.1);
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 0;
+  }
   .build-tag {
     margin: auto;
     color: var(--primary-color);
