--- a/src/Layouts/Header/Header.module.scss
+++ b/src/Layouts/Header/Header.module.scss
@@ -31,6 +31,7 @@ header {
       transition: all 0.5s ease-in-out;
       li {
         list-style: none;
+        transition: all 0.3s ease-in-out;
         a {
           text-decoration: none;
           font-size: var(--default-font-size);
@@ -41,8 +42,10 @@ header {
           position: relative;
           &:hover {
             color: var(--primary-color);
-            transform: translateY(-0.3rem);
           }
+        }
+        &:hover {
+          transform: translateY(-0.3rem);
         }
         &:not(:last-child) {
           margin-right: 1rem;
