--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -1,8 +1,10 @@
 @import 'bootstrap/scss/_functions';
 @import 'bootstrap/scss/_variables';
 @import 'bootstrap/scss/mixins/_breakpoints';
+@import '../../abstracts/mixin';
+
 .about {
-  // background: radial-gradient(farthest-side at -50% 50%, #733236, transparent);
+  // background: radial-gradient(farthest-side at 50% 50%, #f19853, transparent);
   margin: 20vh 0 10vh 0;
   @include media-breakpoint-down(lg) {
     margin: 14vh 0;
@@ -75,6 +77,10 @@
             display: flex;
             align-items: center;
             transition: all 0.3s;
+            svg {
+              font-size: 24px;
+              padding: 0.5rem;
+            }
             &::before {
               display: inline-block;
               content: '';
@@ -83,28 +89,66 @@
               border-top: 6px solid transparent;
               border-bottom: 6px solid transparent;
               border-right: 6px solid transparent;
-              border-left: 6px solid var(--primary-color);
             }
             &:hover {
-              color: var(--primary-color);
               transform: translateY(-0.3rem);
+            }
+          }
+          .javascript {
+            @include text-background-clip(
+              background-image,
+              linear-gradient(to right, #f0db4f, #323330)
+            );
+            color: #f0db4f;
+            &::before {
+              border-left: 6px solid #f0db4f;
+            }
+          }
+          .angular {
+            color: #c3012f;
+            &::before {
+              border-left: 6px solid #c3012f;
+            }
+          }
+          .sass {
+            color: #c66593;
+            &::before {
+              border-left: 6px solid #c66593;
+            }
+          }
+          .react {
+            color: #5fd6f7;
+            &::before {
+              border-left: 6px solid #5fd6f7;
+            }
+          }
+          .html {
+            color: #dc4a25;
+            &::before {
+              border-left: 6px solid #dc4a25;
+            }
+          }
+          .figma {
+            color: #e627ca;
+            &::before {
+              border-left: 6px solid #e627ca;
             }
           }
         }
       }
     }
     .profile-container {
-      min-width: 30rem;
-      width: 30rem;
-      height: 40rem;
-      margin: auto;
+      min-width: 25rem;
+      width: 25rem;
+      height: 30rem;
       position: relative;
-
+      transition: all 0.6s;
+      // transform: rotate(45deg);
       .card {
         position: absolute;
         width: 100%;
         height: 100%;
-        border-radius: 6px;
+        // border-radius: 6px;
         overflow: hidden;
         box-shadow: 0 5px 18px rgba(0, 0, 0, 0.6);
         cursor: pointer;
@@ -119,8 +163,8 @@
           background-color: #000;
           transition: 0.5s;
           img {
-            width: 30rem;
-            height: 40rem;
+            width: 25rem;
+            height: 30rem;
             object-fit: cover;
           }
         }
@@ -138,13 +182,13 @@
             a {
               position: relative;
               display: flex;
-              width: 50px;
-              height: 50px;
+              width: 40px;
+              height: 40px;
               border-radius: 6px;
               line-height: 50px;
               text-align: center;
               background: var(--white-light);
-              font-size: 32px;
+              font-size: 28px;
               color: #333;
               margin: 0 6px;
               transition: 0.4s;
@@ -194,7 +238,7 @@
           left: 0;
           background: var(--white-light);
           width: 100%;
-          height: 100px;
+          height: 70px;
           z-index: 1;
           padding: 10px;
           display: flex;
@@ -204,19 +248,19 @@
             margin: auto;
           }
           h2 {
-            font-size: 2rem;
+            font-size: 1.8rem;
             color: var(--primary-color);
             text-shadow: 0px 0px 1px var(--secondary-color-1);
           }
           p {
-            font-size: 1.6rem;
+            font-size: 1.4rem;
             color: var(--black);
             text-shadow: 0px 0px 1px var(--black);
           }
         }
         &:hover {
           .card-image {
-            transform: translateY(-100px);
+            transform: translateY(-70px);
             transition: all 0.9s;
             img {
               opacity: 0.4;
@@ -228,6 +272,9 @@
             opacity: 1;
           }
         }
+      }
+      &:hover {
+        transform: rotate(0deg);
       }
     }
     @include media-breakpoint-down(lg) {
