--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -4,6 +4,8 @@
 @import '../../abstracts/mixin';
 .home {
   margin: 20vh 0 10vh 0;
+  position: relative;
+  z-index: 100;
   @include media-breakpoint-down(lg) {
     margin: 14vh 0;
   }
@@ -54,6 +56,17 @@
     @include media-breakpoint-down(sm) {
       width: 100%;
     }
+  }
+  .bubble {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 20rem;
+    width: 20rem;
+    border-radius: 50%;
+    background-color: var(--secondary-color-2);
+    z-index: -1;
   }
 }
 .contact-me {
